<resources>
    <string name="app_name">Kotify</string>
    <string name="menu_addPlaylist">Add</string>
    <string name="menu_cancelPlaylist">Cancel</string>
    <string name="button_addPlaylist">Add Playlist</string>
    <string name="hint_playlistTitle">Playlist Title</string>
    <string name="enter_playlist_title"> Please enter playlist Title </string>
    <string name="hint_playlistSong">Please add your favourite song</string>
    <string name="hint_favArtist">Please tell us your favourite artist</string>
    <string name="hint_numbPick">How many songs will be on the playlist?</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_playlist_image">Select playlist image</string>
    <string name="change_playlist_image">Change playlist image</string>
    <string name="save_playlist">Save Playlist</string>
    <string name="button_delPlaylist">Delete button</string>
    <string name="menu_deletePlaylist">Delete</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map Activity</string>
    <string name="title_activity_playlist_maps">Map of Playlists</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="genres">
        <item>Rock</item>
        <item>Pop</item>
        <item>Rap</item>
        <item>Country</item>
        <item>Jazz</item>
    </string-array>


</resources>

